# regurag

./: .dockerignore  .env.example  .gitignore  PDF结构化预处理模块MVP.py  README.md  docker-compose.gpu.yml  docker-compose.milvus-canary.yml  docker-compose.postgresql-canary.yml  docker-compose.yml  中华人民共和国劳动合同法.md  中华人民共和国劳动法.md  最小文本 RAG.py
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.gpu  Dockerfile.postgresql-canary  README.md  pyproject.toml
backend/app/: __init__.py  main.py  runtime.py
backend/config/: answer_guard_rules.json  cross_domain_guard_rules.json  document_split_rules.json  faq_shortcuts.json  knowledge_base_domains.json  knowledge_base_routing.json  light_intent_responses.json  light_intents.json  overview_rules.json  query_aliases.json  query_rewriter_prompts.json  retrieval_rules.json  source_name_rules.json
backend/scripts/: benchmark_chat_stream.py  check_metadata_backend.py  check_vector_store_rollout_readiness.py  compare_eval_reports.py  compare_real_model_eval.py  compare_real_model_retrieval.py  compare_real_profile_eval.py  compare_real_sparse_provider_eval.py  compare_real_sparse_provider_retrieval.py  compare_real_vector_store_eval.py  compare_real_vector_store_retrieval.py  compare_shadow_graph.py  compare_split_profiles.py  compare_stream_benchmark.py  eval_intent_classifier.py  eval_rag.py  regress_pdf_structuring.py  run_canary_overview_checks.py  run_docker_task_queue_concurrency_smoke.py  run_docker_task_queue_mixed_recovery_smoke.py  run_docker_task_queue_retry_smoke.py  run_milvus_canary_checks.py  run_task_worker.py  (+7 more)
(+252 files in other folders)
