[project]
name = "regurag-backend"
version = "0.1.0"
description = "FastAPI backend for the ReguRAG project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.12",
    "cryptography>=45.0.0",
    "fastapi[standard]>=0.128.0",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "openai>=1.99.1",
    "pdfplumber>=0.11.7",
    "python-docx>=1.2.0",
    "pydantic-settings>=2.10.1",
    "psycopg[binary]>=3.2.9",
    "pymilvus[milvus_lite]>=2.4.3",
    "pymupdf>=1.26.4",
    "python-multipart>=0.0.20",
    "pymysql>=1.1.1",
    "rapidocr-onnxruntime>=1.4.4",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.30",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "uvicorn>=0.35.0",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "langchain-openai>=1.1.12",
    "langchain-chroma>=1.1.0",
    "langchain-milvus>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
